--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,17 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>ua.in.sz.git.module</groupId>
+            <artifactId>module-a</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ua.in.sz.git.module</groupId>
+            <artifactId>module-b</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
